syntax = "proto3";

option java_package = "proto";

service ChatService {

  rpc replyServer(FromClient) returns (LoginMessage) {}
  rpc messageResponse(FromClient) returns (MessageSent) {}
  rpc chatRequest (FromClient) returns (FromServer) {}
}
message FromClient {

  string name = 1;
  string message = 2;
}

message FromServer{
  string  name = 1;
  string  message = 2;
}
message LoginMessage{
  string logmessage = 1;
}
message MessageSent{
  string messagesent=1;
}